// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page component It renders correctly with response Success 1`] = `
<div>
  <div
    class="css-1mxmwia"
  >
    <h1>
      STAR WARS
    </h1>
    <h2>
      Caracthers
    </h2>
  </div>
  <div
    class="css-7ydzf1"
  >
    <div
      class="css-xdun4v"
    >
      <a
        class="css-z43cc1"
        href="/person/mockId1"
      >
        mockName1
      </a>
    </div>
    <div
      class="css-xdun4v"
    >
      <a
        class="css-z43cc1"
        href="/person/mockId2"
      >
        mockName2
      </a>
    </div>
  </div>
</div>
`;

exports[`Home Page component it is calling fetch 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;

exports[`Home Page component it is fetching with Response error 1`] = `
<div>
  <p>
    [Network] something went wrong!
  </p>
</div>
`;
